--- a/styleguide/icons/index.html
+++ b/styleguide/icons/index.html
@@ -82,19 +82,19 @@ types:
       <div class="text-center">
         <div class="text-center bg-secondary-04 bg-plate" style="display:inline-block;">
           <i class="scania-icon-email neg xl"></i>
-        </div>    
+        </div>
         <h4>Creating new icons</h4>
         <p>Even though we've aim at having an extensive icon library, chances are that you will not find the icon you need in our library. If you need to create your own icon, we've <a href="guideline-scania-icons.pdf" target="_blank">created these guidelines</a> to help you get it right.</p>
 
         <h4>Icons for Scania applications</h4>
         <p>For internal Scania applications you can use Font Awesome Pro, that offers a more application type iconset. These are licensed by Scania and can be used in Scania projects only. To use them in your application, please use the classes described in the <a href="https://fontawesome.com/cheatsheet/pro#light">Font Awesome Pro Cheat Sheet</a> and if you're want them for mockups, please use <a href="https://legend.scania.com/resources/icons/font-awesome/5.3.1/svgs/light/">the SVG versions</a> (available for Scania only). To align with the Scania Branding as much as possible, please use the Light version of Font Awesome.</p>
-      </div>        
+      </div>
     </div>
   </div>
 
   <div class="app container-fluid light mt-5">
-    <div class="table-responsive">    
-      <table class="table">
+    <div class="table-responsive">
+      <table class="table table-hover">
         <thead>
           <tr>
             <th style="width:5%">No.</th>
@@ -103,7 +103,7 @@ types:
             <th style="width:12%">Category</th>
             <th style="width:30%">Description</th>
             <th style="width:12%">Restrictions</th>
-            <th style="width:10%">Downloads</th>            
+            <th style="width:10%">Downloads</th>
             <th style="width:10%">Keywords</th>
             <th style="width:10%">Notes</th>
             <th style="width:10%">Contact</th>
