Added new site for corporate-ui 4

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <section class="light ux-sections">
       <div class="app">
-        <div class="alert alert-primary text-center"><strong>Good news!</strong> New version of <strong>Corporate UI Beta</strong> out.
+        <div class="alert alert-primary text-center"><strong>Good news!</strong> Corporate UI 4 Beta is out.
           <a class="alert-link" href="/corporate-ui-docs/corporate-ui-4/">Read more!</a>
         </div>
       </div>
