--- a/corporate-ui-4/index.html
+++ b/corporate-ui-4/index.html
@@ -23,7 +23,7 @@
   <c-main-content>
     <style>
      article section {
-      margin-top: 50px;
+      margin-top: 40px;
      }
      .back-link {
        padding:20px;
@@ -45,7 +45,7 @@
               <p>
                 The most prominent change is to the technology used to create Web components. In this version of Corporate UI it has been decided to move away from Google Polymer to StencilJS. The reason for this change is the request for a more simple, lightweight and future proof Corporate UI by the developer community.
                 Stencil generates standard web component that works in any framework or no framework at all. The logic is now moved from the runtime to the compilation phase to optimize load time. With this technology it is now possible to import component as a module. In addition, web components now available as self-contained components where the styling is scoped within the components.
-                More information about Web components can be found in the new Corporate UI 4 repository.
+                More information about Web components can be found in the <a target="_blank" href="https://github.com/scania/corporate-ui-dev"> new Corporate UI 4 repository</a>.
               </p>
             </section>
             <section>
@@ -62,17 +62,11 @@
               <p>
                 Another change that was made is the configuration for styling to deliver a better developer experience.
                 The style theme has now been separated from Corporate UI in order to give developers better control of the theming.
-                Separating the style theme from Corporate UI enables parallel updates to be made to the different repository’s.
+                Separating the style theme from Corporate UI enables parallel updates to be made to the different repositorys.
                 Furthermore it enables for additional brand themes to be created and added to apply on the Corporate UI components.
                 Applying the themes is made easy by using a new component called c-theme. All assets such as favicons, fonts, logotype and wordmark is now also bundled together and available in the theme package.
                 While Scania will stick to the theme approved and aligned with Scania Identity Guidelines, this welcome suggestions how to expand the current theme to areas of use that has special requirements.
-                Check out Scania theme repository for a more detail documentation.
-              </p>
-              <p>
-                <a target="_blank" href="https://github.com/scania/corporate-ui-dev">Corporate UI 4 repository</a>
-              </p>
-              <p>
-                <a target="_blank" href="https://github.com/scania/scania-theme">Scania Theme repository</a>
+                Check out <a href="https://github.com/scania/scania-theme">Scania theme repository </a>for a more detail documentation.
               </p>
             </section>
             <section>
