Icon changes text

--- a/styleguide/icons/index.html
+++ b/styleguide/icons/index.html
@@ -87,7 +87,11 @@ types:
         <p>Even though we've aim at having an extensive icon library, chances are that you will not find the icon you need in our library. If you need to create your own icon, we've <a href="guideline-scania-icons.pdf" target="_blank">created these guidelines</a> to help you get it right.</p>
 
         <h4>Icons for Scania applications</h4>
-        <p>For internal Scania applications you can use Font Awesome Pro, that offers a more application type iconset. These are licensed by Scania and can be used in Scania projects only. To use them in your application, please use the classes described in the <a href="https://fontawesome.com/cheatsheet/pro#light">Font Awesome Pro Cheat Sheet</a> and if you're want them for mockups, please use <a href="https://legend.scania.com/resources/icons/font-awesome/5.3.1/svgs/light/">the SVG versions</a> (available for Scania only). To align with the Scania Branding as much as possible, please use the Light version of Font Awesome.</p>
+        <p>
+            The Scania Icon Library tries to provide enough useful icons for your application, but in some cases you will need additional Icons.
+            If you are unable to create that Icon according to the <a href="guideline-scania-icons.pdf">icon guidelines</a>, we recommend you to use <a target="_blank" href="https://fontawesome.com/">Font Awesome Pro Light</a> icons to align with Scania Branding as much as possible.
+            These can be used on web and be downloaded as SVG and used for mock-ups.
+        </p>
       </div>
     </div>
   </div>
