Added link for version

--- a/corporate-ui-4/index.html
+++ b/corporate-ui-4/index.html
@@ -39,6 +39,7 @@
             <section class="mt-5">
               <h1 style="display:inline-block;">Corporate UI 4.x <span style="vertical-align: bottom" class="label label-success">Beta</span></h1>
               <p class="lead">Corporate UI is in the final stages to release a major update, version 4.x. With it comes several improvements based on feedback and insights from the previous versions of Corporate UI. The goal to deliver a consistent styling combined with reusable components remains the same, but the way of achieving that goal has received a few changes.</p>
+              <p><a href="https://static.scania.com/build/global/4.0.0-beta/www/index.html" target="_blank">Developer Documentation</a></p>
             </section>
             <section>
               <h3>Web components</h3>
@@ -66,7 +67,7 @@
                 Furthermore it enables for additional brand themes to be created and added to apply on the Corporate UI components.
                 Applying the themes is made easy by using a new component called c-theme. All assets such as favicons, fonts, logotype and wordmark is now also bundled together and available in the theme package.
                 While Scania will stick to the theme approved and aligned with Scania Identity Guidelines, this welcome suggestions how to expand the current theme to areas of use that has special requirements.
-                Check out <a href="https://github.com/scania/scania-theme">Scania theme repository </a>for a more detail documentation.
+                Check out <a targeT="_blank" href="https://github.com/scania/scania-theme">Scania theme repository </a>for a more detail documentation.
               </p>
             </section>
             <section>
@@ -84,7 +85,7 @@
               <div>
                 <code>&lt;script src=&quot;https://static.scania.com/build/global/4.x/corporate-ui.js&quot;&gt;&lt;/script&gt;</code>
               </div>
-              <p>Replace x with <a href="https://github.com/scania/corporate-ui-dev/releases">available releases</a>.</p>
+              <p>Replace x with <a target="_blank" href="https://github.com/scania/corporate-ui-dev/releases">available releases</a>.</p>
               <div>
                 <strong>NPM:</strong>
               </div>
