--- a/corporate-ui-4/index.html
+++ b/corporate-ui-4/index.html
@@ -40,11 +40,12 @@
               <h1 style="display:inline-block;">Corporate UI 4.x <span style="vertical-align: bottom" class="label label-success">Beta</span></h1>
               <p class="lead">Corporate UI is in the final stages to release a major update, version 4.x. With it comes several improvements based on feedback and insights from the previous versions of Corporate UI. The goal to deliver a consistent styling combined with reusable components remains the same, but the way of achieving that goal has received a few changes.</p>
               <p><a href="https://static.scania.com/build/global/4.0.0-beta/www/index.html" target="_blank">Developer Documentation</a></p>
+              <p><a href="https://github.com/scania/corporate-ui-dev/wiki/" target="_blank">Corporate-ui 4.x Wiki</a></p>
             </section>
             <section>
               <h3>Web components</h3>
               <p>
-                The most prominent change is to the technology used to create Web components. In this version of Corporate UI it has been decided to move away from Google Polymer to StencilJS. The reason for this change is the request for a more simple, lightweight and future proof Corporate UI by the developer community.
+                The most prominent change is to the technology used to create Web components. In this version of Corporate UI it has been decided to move away from Google Polymer to <a href="https://stenciljs.com/docs/introduction/" target="_blank">StencilJS </a>. The reason for this change is the request for a more simple, lightweight and future proof Corporate UI by the developer community.
                 Stencil generates standard web component that works in any framework or no framework at all. The logic is now moved from the runtime to the compilation phase to optimize load time. With this technology it is now possible to import component as a module. In addition, web components now available as self-contained components where the styling is scoped within the components.
                 More information about Web components can be found in the <a target="_blank" href="https://github.com/scania/corporate-ui-dev"> new Corporate UI 4 repository</a>.
               </p>
@@ -52,7 +53,7 @@
             <section>
               <h3>Bootstrap Upgrade</h3>
               <p>
-                In this version Bootstrap will get a requested upgrade from Bootstrap 3 to Bootstrap 4.
+                In this version Bootstrap will get a requested upgrade from <a target="_blank" href="https://getbootstrap.com/docs/4.3/migration/">Bootstrap 3 to Bootstrap 4 </a>.
                 This will bring a few changes to the elements available in the Corporate UI, where some frequently used elements like Panels will be replaced Cards.
                 However, in order to smooth the transition from bootstrap 3 to 4 an additional CSS that contains the deprecated elements will be provided.
                 Going forward the goal is to stay close to the latest stable version of Bootstrap available.
@@ -68,6 +69,18 @@
                 Applying the themes is made easy by using a new component called c-theme. All assets such as favicons, fonts, logotype and wordmark is now also bundled together and available in the theme package.
                 While Scania will stick to the theme approved and aligned with Scania Identity Guidelines, this welcome suggestions how to expand the current theme to areas of use that has special requirements.
                 Check out <a targeT="_blank" href="https://github.com/scania/scania-theme">Scania theme repository </a>for a more detail documentation.
+              </p>
+            </section>
+            <section>
+              <h3>Breaking Changes</h3>
+              <p>
+                Corporate-ui 4 have made big changes to the structure. Polymer is replaced by Stencil to create Custom elements,
+                Naming convention of Custom elements like c-corporate-header has been changed to c-header.
+                C-social-media is deprecated and is replaced with c-icon to generate the icons.
+                Bootstrap is upgraded from 3 to 4. Some CSS have been either deprecated or changes into new classes.
+                More information can be found in the <a target="_blank" href="https://getbootstrap.com/docs/4.3/migration/">Bootstrap summary</a>.
+                Styling is now being contained in its own package called Scania theme.
+                Full list of breaking changes can be found in the <a targetr="_blank" href="https://github.com/scania/corporate-ui-dev/wiki/Upgrade-from-version-3.x-to-4.x">Corporate UI 4 Wiki</a>.
               </p>
             </section>
             <section>
