--- a/corporate-ui-4/index.html
+++ b/corporate-ui-4/index.html
@@ -54,9 +54,9 @@
               <h3>Bootstrap Upgrade</h3>
               <p>
                 In this version Bootstrap will get a requested upgrade from <a target="_blank" href="https://getbootstrap.com/docs/4.3/migration/">Bootstrap 3 to Bootstrap 4 </a>.
-                This will bring a few changes to the elements available in the Corporate UI, where some frequently used elements like Panels will be replaced Cards.
-                However, in order to smooth the transition from bootstrap 3 to 4 an additional CSS that contains the deprecated elements will be provided.
-                Going forward the goal is to stay close to the latest stable version of Bootstrap available.
+                This will bring a few changes to the elements available in the Corporate UI, where some frequently used elements like Panels will be replaced by Cards.
+                However, in order to smooth the transition from bootstrap 3 to 4, an additional CSS that contains the deprecated elements will be provided.
+                Going forward, the goal is to stay close to the latest stable version of Bootstrap available.
               </p>
             </section>
             <section>
@@ -65,7 +65,7 @@
                 Another change that was made is the configuration for styling to deliver a better developer experience.
                 The style theme has now been separated from Corporate UI in order to give developers better control of the theming.
                 Separating the style theme from Corporate UI enables parallel updates to be made to the different repositorys.
-                Furthermore it enables for additional brand themes to be created and added to apply on the Corporate UI components.
+                Furthermore, it enables for additional brand themes to be created and added to apply on the Corporate UI components.
                 Applying the themes is made easy by using a new component called c-theme. All assets such as favicons, fonts, logotype and wordmark is now also bundled together and available in the theme package.
                 While Scania will stick to the theme approved and aligned with Scania Identity Guidelines, this welcome suggestions how to expand the current theme to areas of use that has special requirements.
                 Check out <a targeT="_blank" href="https://github.com/scania/scania-theme">Scania theme repository </a>for a more detail documentation.
