--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
       <div class="container text-center page-header">
         <div class="row">
-          <h1 class="text-center">UX Library<small>For the Corporate UI<br />Design System</small></h1>
+          <h1 class="text-center">UX Library<small>Scania Design System</small></h1>
           <p>Welcome to Scania UX Library. Here you'll find information about how to implement and use our new design elements like the logotype, fonts, icons and web components. The UX Library serves a big audience and many types of stakeholders. Please select the appropriate section for you particular needs.</p>
         </div>
 
