--- a/corporate-ui-4/index.html
+++ b/corporate-ui-4/index.html
@@ -39,7 +39,7 @@
             <section class="mt-5">
               <h1 style="display:inline-block;">Corporate UI 4.x <span style="vertical-align: bottom" class="label label-success">Beta</span></h1>
               <p class="lead">Corporate UI is in the final stages to release a major update, version 4.x. With it comes several improvements based on feedback and insights from the previous versions of Corporate UI. The goal to deliver a consistent styling combined with reusable components remains the same, but the way of achieving that goal has received a few changes.</p>
-              <p><a href="https://static.scania.com/build/global/4.0.0-beta.3/www/index.html" target="_blank">Developer Documentation</a></p>
+              <p><a href="https://scania.github.io/corporate-ui-site/info/corporateui" target="_blank">Developer Documentation</a></p>
               <p><a href="https://github.com/scania/corporate-ui-dev/wiki/" target="_blank">Corporate-ui 4.x Wiki</a></p>
             </section>
             <section>
@@ -96,7 +96,7 @@
                 <code>&lt;script src="https://static.scania.com/build/global/themes/scania/1.x/scania-theme.js"&gt;&lt;/script&gt;</code>
               </div>
               <div>
-                <code>&lt;script src=&quot;https://static.scania.com/build/global/4.x/corporate-ui.js&quot;&gt;&lt;/script&gt;</code>
+                <code>&lt;script src=&quot;https://static.scania.com/build/global/4.x/corporate-ui/corporate-ui.js&quot;&gt;&lt;/script&gt;</code>
               </div>
               <p>Replace x with <a target="_blank" href="https://github.com/scania/corporate-ui-dev/releases">available releases</a>.</p>
               <div>
