--- a/corporate-ui/faq/index.html
+++ b/corporate-ui/faq/index.html
@@ -6,7 +6,7 @@
   <noscript><meta http-equiv="refresh" content="0;url=https://static.scania.com/vendors/components/pure-js/nonJS-browsers/1.0.0/nonJS-browsers.html"></noscript>
   <title>UX Library - FAQ</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-  <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js?monitoring=true"></script>
+  <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js?monitoring=true"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
   <script src="/corporate-ui-docs/js/google-analytics.js"></script>
