--- a/styleguide/typography/index.html
+++ b/styleguide/typography/index.html
@@ -8,7 +8,7 @@
 
   <title>UX Library - Typography</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
-  <script src="https://static.scania.com/build/global/3.5.3-1/js/corporate-ui.js"></script>
+  <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js"></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
   <script src="/corporate-ui-docs/js/google-analytics.js"></script>
