--- a/index.html
+++ b/index.html
@@ -43,46 +43,9 @@
   </c-corporate-header>
 
   <c-main-content>
-    <c-main-navigation>
-      <primary-items>
-        <nav-item location="/corporate-ui-docs/" class="active">Home</nav-item>
-        <nav-item location="/corporate-ui-docs/corporate-ui/">Corporate UI
-          <sub-navigation caption="Corporate UI">
-            <nav-item location="/corporate-ui-docs/corporate-ui/">About</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/components/">Components</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/html-copy-paste/" >HTML copy paste</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/frameworks/">JS Frameworks</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/faq/">FAQ</nav-item>
-            <nav-item location="/corporate-ui-docs/corporate-ui/contact-us.html">Contact Us</nav-item>
-          </sub-navigation>
-        </nav-item>
-        <nav-item location="/corporate-ui-docs/mobile-apps/">Mobile Apps
-          <sub-navigation caption="Mobile Apps">
-            <nav-item location="/corporate-ui-docs/mobile-apps/">Overview</nav-item>
-            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-docs/mobile-docs.html">Documentation</nav-item>
-            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-example/mobile-example.html">Example</nav-item>
-            <nav-item location="/corporate-ui-docs/mobile-apps/mobile-contact/mobile-contact.html">Contact us</nav-item>
-          </sub-navigation>
-        </nav-item>
-        <nav-item location="/corporate-ui-docs/styleguide/">Style Guide
-          <sub-navigation caption="Style Guide">
-            <nav-item location="/corporate-ui-docs/styleguide/">Home</nav-item>
-            <nav-item location="/corporate-ui-docs/styleguide/logotypes/">Logotype</nav-item>
-            <nav-item location="/corporate-ui-docs/styleguide/icons/">Icons</nav-item>
-            <nav-item location="/corporate-ui-docs/styleguide/colours/">Colours</nav-item>
-            <nav-item location="/corporate-ui-docs/styleguide/typography/">Typography</nav-item>
-          </sub-navigation>
-        </nav-item>
-      </primary-items>
-
-      <secondary-items>
-        <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors<i class="fal fa-external-link ml-2"></i></a></nav-item>
-      </secondary-items>
-    </c-main-navigation>
-
     <section class="light ux-sections">
       <div class="app">
-        <div class="alert alert-primary text-center"><strong>Good news!</strong> Corporate UI 4 Beta is out.
+        <div class="alert alert-primary text-center"><strong>Amazing news!</strong> Corporate UI 4 out.
           <a class="alert-link" href="/corporate-ui-docs/corporate-ui-4/">Read more!</a>
         </div>
       </div>
@@ -93,21 +56,29 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+            <div class="content-landing-page">
+              <a target="_blank" href="https://scania.github.io/corporate-ui-site/info/corporateui"> <img src="/corporate-ui-docs/images/templates-sample.svg"></a>
+              <h4>Corporate UI 4 <i class="fal fa-external-link ml-2"></i> </h4>
+              <span class="label label-success">New version!</span>
+              <p class="mt-2">Find out more about our Corporate UI 4 and our components here</p>
+              </div>
+            </div>
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="content-landing-page">
               <a href="/corporate-ui-docs/corporate-ui/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a>
-              <h4>Corporate UI</h4>
-              <p>If you're a Designer or Developer please pick the correct patterns from the Design System. </p>
+              <h4>Corporate UI 3</h4>
+              <p>If you're are still using Corporate UI 3 you can find our documentation here </p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="content-landing-page">
               <a href="/corporate-ui-docs/mobile-apps/"><img class="mobile-apps" src="/corporate-ui-docs/images/interaction.svg"></a>
               <h4>Mobile Apps</h4>
               <p>Developing a native mobile application differs from developing for the web.</p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+          <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <div class="content-landing-page">
               <a href="/corporate-ui-docs/styleguide/"><img src="/corporate-ui-docs/images/styleguide.svg"></a>
               <h4>Styleguide</h4>
