Added info text for common editors

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <div class="content-landing-page">
                 <a href="https://www.scania.com/ux-library/en/home.html" target="_blank"><img class="mobile-apps" src="/corporate-ui-docs/images/interaction.svg"></a>
                 <h4>Common Editors <i class="fal fa-external-link ml-2"></i> </h4>
-                <p>Common Editors</p>
+                <p>In the styleguide you'll find out more about how to use the new <a href="/corporate-ui-docs/icons/">icons</a>, <a href="/corporate-ui-docs/typography/">typography</a> and  <a href="/corporate-ui-docs/logotype/">logotype</a> in web based applications. They are all included in the <a href="/corporate-ui-docs/developer/">Corporate UI Design System</a>.</p>
               </div>
             </div>
         </div>
