--- a/corporate-ui-4/index.html
+++ b/corporate-ui-4/index.html
@@ -9,10 +9,9 @@
   <title>Corporate-ui 4</title>
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
 
-  <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js?monitoring=true"></script>
+  <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js"></script>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>
+
 
 </head>
 <body class="scania app">
@@ -117,7 +116,7 @@
     <nav-item><a href="https://github.com/scania/corporate-ui" target="_blank">Github</a></nav-item>
     <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
   </c-corporate-footer>
-  <c-cookie-message name="cookieMessage" text="hideMessage" path="/"></c-cookie-message>
+  
 </body>
 </html>
 
