--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <script src="https://static.scania.com/vendors/components/pure-js/browser-reject/1.0.0/js/browser-reject.js"></script>
   <script src="https://static.scania.com/vendors/frameworks/jQuery/1.11.3/jquery-1.11.3.min.js"></script>
   <script src="https://static.scania.com/build/global/3.5.5/js/corporate-ui.js"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113165423-1"></script>
-  <script src="/corporate-ui-docs/js/google-analytics.js"></script>
+
 
   <link rel="stylesheet" href="/corporate-ui-docs/css/ux-lib.css">
   <style>
@@ -45,8 +44,8 @@
   <c-main-content>
     <section class="light ux-sections">
       <div class="app">
-        <div class="alert alert-primary text-center"><strong>Amazing news!</strong> Corporate UI 4 out.
-          <a class="alert-link" href="/corporate-ui-docs/corporate-ui-4/">Read more!</a>
+        <div class="alert alert-primary text-center"><strong>Amazing news!</strong> Scania Digital Design System is out.
+          <a class="alert-link" target="_blank" href="https://digitaldesign.scania.com">Read more!</a>
         </div>
       </div>
       <div class="container text-center page-header">
@@ -56,22 +55,22 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" style="margin-bottom: ">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="content-landing-page">
-              <a target="_blank" href="https://scania.github.io/corporate-ui-site/info/corporateui"> <img src="/corporate-ui-docs/images/templates-sample.svg"></a>
-              <h4>Corporate UI 4 <i class="fal fa-external-link ml-2"></i> </h4>
-              <span class="label label-success">New version!</span>
-              <p class="mt-2">Find out more about our Corporate UI 4 and our components here</p>
+              <a target="_blank" href="https://digitaldesign.scania.com"> <img src="/corporate-ui-docs/images/templates-sample.svg"></a>
+              <h4>Scania Digital Design System <i class="fal fa-external-link ml-2"></i> </h4>
+              <span class="label label-success">New!</span>
+              <p class="mt-2">Find out more about SDDS and our new components here</p>
               </div>
             </div>
-          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" style="margin-bottom: ">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="content-landing-page">
               <a href="/corporate-ui-docs/corporate-ui/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a>
               <h4>Corporate UI 3</h4>
               <p>If you're are still using Corporate UI 3 you can find our documentation here </p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" style="margin-bottom: ">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="content-landing-page">
               <a href="/corporate-ui-docs/mobile-apps/"><img class="mobile-apps" src="/corporate-ui-docs/images/interaction.svg"></a>
               <h4>Mobile Apps</h4>
@@ -80,7 +79,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" style="margin-bottom: ">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
             <div class="content-landing-page">
               <a href="/corporate-ui-docs/styleguide/"><img src="/corporate-ui-docs/images/styleguide.svg"></a>
               <h4>Styleguide</h4>
@@ -92,7 +91,7 @@
               </p>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12" style="margin-bottom: ">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
               <div class="content-landing-page">
                 <a href="https://www.scania.com/ux-library/en/home.html" target="_blank"><img class="mobile-apps" src="/corporate-ui-docs/images/interaction.svg"></a>
                 <h4>Common Editors <i class="fal fa-external-link ml-2"></i> </h4>
@@ -109,6 +108,5 @@
     <nav-item location="mailto:corporate-ui@scania.com">Contact</nav-item>
   </c-corporate-footer>
 
-  <c-cookie-message name="cookieMessage" text="hideMessage" path="/"></c-cookie-message>
 </body>
 </html>
