Add deprecation info
- Added banner in homepage
- Added badge in homepage
- Added content in Corporate UI 3 About page

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   <c-main-content>
     <section class="light ux-sections">
       <div class="app">
-        <div class="alert alert-primary text-center"><strong>Amazing news!</strong> Scania Digital Design System is out.
-          <a class="alert-link" target="_blank" href="https://digitaldesign.scania.com">Read more!</a>
+        <div class="alert alert-primary text-center"><strong>Support for Corporate UI 3 will end in August 2021.</strong>
+          <a class="alert-link" href="/corporate-ui-docs/corporate-ui/">Read more!</a>
         </div>
       </div>
       <div class="container text-center page-header">
@@ -67,6 +67,7 @@
             <div class="content-landing-page">
               <a href="/corporate-ui-docs/corporate-ui/"><img src="/corporate-ui-docs/images/templates-sample.svg"></a>
               <h4>Corporate UI 3</h4>
+              <span class="label label-warning">Support Ended 2021</span>
               <p>If you're are still using Corporate UI 3 you can find our documentation here </p>
             </div>
           </div>
