--- a/styleguide/colours/index.html
+++ b/styleguide/colours/index.html
@@ -58,6 +58,23 @@
           <nav-item> <a href="https://www.scania.com/ux-library/en/home.html" target="_blank">Comon editors<i class="fal fa-external-link ml-2"></i></a></nav-item>
         </secondary-items>
       </c-main-navigation>
+
+      <div class="alert alert-warning text-center mb-0">
+        UX library will be closed by the end of Q3 2021. Check out
+        <a
+          class="alert-link"
+          href="https://digitaldesign.scania.com/"
+          target="_blank"
+          >Scania Digital Design System</a
+        >
+        for guidelines and more.
+      </div>
+      <div class="alert alert-primary text-center">
+        <strong>Support for Corporate UI 3 will end in August 2021.</strong>
+        <a class="alert-link" href="/corporate-ui-docs/corporate-ui/"
+          >Read more!</a
+        >
+      </div>
       <section>
         <article>
           <div class="container">
