--- a/corporate-ui/faq/index.html
+++ b/corporate-ui/faq/index.html
@@ -154,7 +154,10 @@
       </secondary-items>
     </c-main-navigation>
 
-    <section class="light">
+        <div class="alert alert-warning text-center mb-0">UX library will be closed by the end of Q3 2021. Check out <a class="alert-link" href="https://digitaldesign.scania.com/" target="_blank">Scania Digital Design System</a> for guidelines and more.</div>
+        <div class="alert alert-primary text-center"><strong>Support for Corporate UI 3 will end in August 2021.</strong>
+          <a class="alert-link" href="/corporate-ui-docs/corporate-ui/">Read more!</a>
+        </div><section class="light">
       <div class="container">
         <article>
            <!-- accordion template -->
