--- a/styleguide/icons/index.html
+++ b/styleguide/icons/index.html
@@ -53,44 +53,103 @@ style: |
   p a {font-weight: bold}
 
 types:
-  -
-    name: Adobe Illustrator
+  - name: Adobe Illustrator
     short: AI
-  -
-    name: SVG Vector
+  - name: SVG Vector
     short: SVG
-  -
-    name: PNG Bitmap
+  - name: PNG Bitmap
     short: PNG
 ---
 
+<div class="alert alert-warning text-center mb-0">
+  UX library will be closed by the end of Q3 2021. Check out
+  <a class="alert-link" href="https://digitaldesign.scania.com/" target="_blank"
+    >Scania Digital Design System</a
+  >
+  for guidelines and more.
+</div>
+<div class="alert alert-primary text-center">
+  <strong>Support for Corporate UI 3 will end in August 2021.</strong>
+  <a class="alert-link" href="/corporate-ui-docs/corporate-ui/">Read more!</a>
+</div>
 <section>
   <div class="container">
     <div>
       <h2>Scania Icons</h2>
-      <p>The design of the modern and custom-made icon system for communication is based on the Scania symbol, the experience throughout all applications. The icons enable clear and instantaneous communication for information graphics and sales support. The icons should always be supported by text (except for some UI icons used in web applications). Use the icons for information, never for decoration or as logotypes.</p>
-      <p>Restrictions: The icons may only be used for their intended purposes. Any restrictions must be followed. The icons may not be modified. Any questions may be submitted to Scania identity helpdesk via <a href="mailto:identity@scania.com">identity@scania.com</a>.</p>
-      <p>Scania Sans font family and the product DNA. It has been customised with the goal of unifying the Scania brand.</p>
+      <p>
+        The design of the modern and custom-made icon system for communication
+        is based on the Scania symbol, the experience throughout all
+        applications. The icons enable clear and instantaneous communication for
+        information graphics and sales support. The icons should always be
+        supported by text (except for some UI icons used in web applications).
+        Use the icons for information, never for decoration or as logotypes.
+      </p>
+      <p>
+        Restrictions: The icons may only be used for their intended purposes.
+        Any restrictions must be followed. The icons may not be modified. Any
+        questions may be submitted to Scania identity helpdesk via
+        <a href="mailto:identity@scania.com">identity@scania.com</a>.
+      </p>
+      <p>
+        Scania Sans font family and the product DNA. It has been customised with
+        the goal of unifying the Scania brand.
+      </p>
     </div>
 
     <div>
       <h4>Using the icons</h4>
-      <p>The icons are available through CSS when using the Corporate UI framework. If you out want to use the icons without the Corporate UI framework, for example in a legacy application, you can include only the icons.css file and use the icons by the same CSS classes as described below (inspect each icon to obtain its CSS class).</p>
+      <p>
+        The icons are available through CSS when using the Corporate UI
+        framework. If you out want to use the icons without the Corporate UI
+        framework, for example in a legacy application, you can include only the
+        icons.css file and use the icons by the same CSS classes as described
+        below (inspect each icon to obtain its CSS class).
+      </p>
       <h4>Sizes and colors</h4>
-      <p>The icons are currently available in a positive (Scania Blue) and negative (Scania White) color. By default you'll get them in Scania Blue and if you want to use the negative version, just add the class <b>neg</b> after the icon class. To show the icons in diffent sizes, use the classes <b>xs</b>, <b>sm</b>, <b>md</b>, <b>lg</b> and <b>xl</b>, <b>xxl</b>. For example:
-      <xmp style="font-size: 18px;text-align: center"><i class="scania-icon-email neg xl"></i></xmp>
+      <p>
+        The icons are currently available in a positive (Scania Blue) and
+        negative (Scania White) color. By default you'll get them in Scania Blue
+        and if you want to use the negative version, just add the class
+        <b>neg</b> after the icon class. To show the icons in diffent sizes, use
+        the classes <b>xs</b>, <b>sm</b>, <b>md</b>, <b>lg</b> and <b>xl</b>,
+        <b>xxl</b>. For example:
+        <xmp
+          style="
+            font-size: 18px;
+            text-align: center;
+          "><i class="scania-icon-email neg xl"></i></xmp>
+      </p>
+
       <div class="text-center">
-        <div class="text-center bg-secondary-04 bg-plate" style="display:inline-block;">
+        <div
+          class="text-center bg-secondary-04 bg-plate"
+          style="display: inline-block"
+        >
           <i class="scania-icon-email neg xl"></i>
         </div>
         <h4>Creating new icons</h4>
-        <p>Even though we've aim at having an extensive icon library, chances are that you will not find the icon you need in our library. If you need to create your own icon, we've <a href="guideline-scania-icons.pdf" target="_blank">created these guidelines</a> to help you get it right.</p>
+        <p>
+          Even though we've aim at having an extensive icon library, chances are
+          that you will not find the icon you need in our library. If you need
+          to create your own icon, we've
+          <a href="guideline-scania-icons.pdf" target="_blank"
+            >created these guidelines</a
+          >
+          to help you get it right.
+        </p>
 
         <h4>Icons for Scania applications</h4>
         <p>
-            The Scania Icon Library tries to provide enough useful icons for your application, but in some cases you will need additional Icons.
-            If you are unable to create that Icon according to the <a href="guideline-scania-icons.pdf">icon guidelines</a>, we recommend you to use <a target="_blank" href="https://fontawesome.com/">Font Awesome Pro Light</a> icons to align with Scania Branding as much as possible.
-            These can be used on web and be downloaded as SVG and used for mock-ups.
+          The Scania Icon Library tries to provide enough useful icons for your
+          application, but in some cases you will need additional Icons. If you
+          are unable to create that Icon according to the
+          <a href="guideline-scania-icons.pdf">icon guidelines</a>, we recommend
+          you to use
+          <a target="_blank" href="https://fontawesome.com/"
+            >Font Awesome Pro Light</a
+          >
+          icons to align with Scania Branding as much as possible. These can be
+          used on web and be downloaded as SVG and used for mock-ups.
         </p>
       </div>
     </div>
@@ -101,50 +160,47 @@ types:
       <table class="table table-hover">
         <thead>
           <tr>
-            <th style="width:5%">No.</th>
-            <th style="width:12%">Name</th>
-            <th style="width:2%">Icon</th>
-            <th style="width:12%">Category</th>
-            <th style="width:30%">Description</th>
-            <th style="width:12%">Restrictions</th>
-            <th style="width:10%">Downloads</th>
-            <th style="width:10%">Keywords</th>
-            <th style="width:10%">Notes</th>
-            <th style="width:10%">Contact</th>
+            <th style="width: 5%">No.</th>
+            <th style="width: 12%">Name</th>
+            <th style="width: 2%">Icon</th>
+            <th style="width: 12%">Category</th>
+            <th style="width: 30%">Description</th>
+            <th style="width: 12%">Restrictions</th>
+            <th style="width: 10%">Downloads</th>
+            <th style="width: 10%">Keywords</th>
+            <th style="width: 10%">Notes</th>
+            <th style="width: 10%">Contact</th>
           </tr>
         </thead>
         <tbody>
-          {% assign root = 'https://static.scania.com/resources/icons/scania/' %}
+          {% assign root = 'https://static.scania.com/resources/icons/scania/'
+          %} {% for icon in site.data.icons %}
+          <tr>
+            <td>{{ icon.no }}</td>
+            <td>{{ icon.name }}</td>
+            <td>
+              <i class="scania-icon-{{ icon.class }} md"></i>
+            </td>
+            <td>{{ icon.category }}</td>
+            <td>{{ icon.description }}</td>
+            <td>{{ icon.restrictions }}</td>
+            <td>
+              {% for type in page.types %} {% comment %} The files are located
+              in diferent folders thats why we have this condition {% endcomment
+              %} {% if icon.folder %} {% assign url = 'icons/' | append:
+              icon.folder | append: '/' | append: icon.folder | append: '-' |
+              append: type.short %} {% else %} {% assign url = type.short |
+              append: '_ZIP/' | append: icon.file %} {% endif %} {% if
+              icon.category == "SIS" %} {% assign url = url | prepend:
+              'sis-icons/' %} {% endif %}
 
-          {% for icon in site.data.icons %}
-            <tr>
-              <td>{{ icon.no }}</td>
-              <td>{{ icon.name }}</td>
-              <td>
-                <i class="scania-icon-{{ icon.class }} md"></i>
-              </td>
-              <td>{{ icon.category }}</td>
-              <td>{{ icon.description }}</td>
-              <td>{{ icon.restrictions }}</td>
-              <td>
-                {% for type in page.types %}
-                  {% comment %} The files are located in diferent folders thats why we have this condition {% endcomment %}
-                  {% if icon.folder %}
-                    {% assign url = 'icons/' | append: icon.folder | append: '/' | append: icon.folder | append: '-' | append: type.short %}
-                  {% else %}
-                    {% assign url = type.short | append: '_ZIP/' | append: icon.file %}
-                  {% endif %}
-                  {% if icon.category == "SIS" %}
-                    {% assign url = url | prepend: 'sis-icons/' %}
-                  {% endif %}
-
-                  <a href="{{root}}{{ url }}.zip" download>{{ type.name }}</a>
-                {% endfor %}
-              </td>
-              <td>{{ icon.keywords }}</td>
-              <td>{{ icon.notes }}</td>
-              <td>{{ icon.contact }}</td>
-            </tr>
+              <a href="{{root}}{{ url }}.zip" download>{{ type.name }}</a>
+              {% endfor %}
+            </td>
+            <td>{{ icon.keywords }}</td>
+            <td>{{ icon.notes }}</td>
+            <td>{{ icon.contact }}</td>
+          </tr>
           {% endfor %}
         </tbody>
       </table>
